--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    implementation platform("com.google.firebase:firebase-bom:30.0.1")
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -80,7 +82,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.navigation:navigation-compose:2.5.3"
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     implementation("androidx.compose.ui:ui-text-google-fonts:1.4.2")
     implementation "androidx.compose.material:material-icons-extended:1.4.3"
     implementation 'io.coil-kt:coil-compose:1.4.0'
@@ -99,6 +101,7 @@ dependencies {
     implementation 'com.github.skydoves:sandwich:1.2.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.0'
+
 
 
 }
